:bug: fix numbers too big

--- a/src/scss/components/_numbers.scss
+++ b/src/scss/components/_numbers.scss
@@ -23,7 +23,7 @@
         display: block;
         margin: 0 0 -5px;
         font-family: $poppinsLight;
-        font-size: 6rem;
+        font-size: 5rem;
         line-height: 1;
         span{
             display: inline-block;
@@ -65,9 +65,6 @@
         width: 50%;
         margin: 0;
         font-size: 1.6rem;
-        b{
-            font-size: 5rem;
-        }
     }
 }
 
